--- a/kmtmg/en.lproj/MyDocument.xib
+++ b/kmtmg/en.lproj/MyDocument.xib
@@ -18,8 +18,10 @@
 			<string>NSScrollView</string>
 			<string>NSButtonCell</string>
 			<string>NSImageView</string>
+			<string>NSMenu</string>
 			<string>NSImageCell</string>
 			<string>NSCollectionViewItem</string>
+			<string>NSMenuItem</string>
 			<string>NSCustomView</string>
 			<string>NSCustomObject</string>
 			<string>NSView</string>
@@ -39,6 +41,64 @@
 			</object>
 			<object class="NSCustomObject" id="613418571">
 				<string key="NSClassName">FirstResponder</string>
+			</object>
+			<object class="NSWindowTemplate" id="456788506">
+				<int key="NSWindowBacking">1</int>
+				<string key="NSWindowRect">{{109, 132}, {169, 125}}</string>
+				<int key="NSWTFlags">-2072505344</int>
+				<string key="NSWindowTitle">Rubber</string>
+				<string key="NSWindowClass">MyLayerWindow</string>
+				<nil key="NSViewClass"/>
+				<object class="NSView" key="NSWindowView" id="953402551">
+					<reference key="NSNextResponder"/>
+					<int key="NSvFlags">256</int>
+					<array class="NSMutableArray" key="NSSubviews">
+						<object class="NSCustomView" id="668234819">
+							<reference key="NSNextResponder" ref="953402551"/>
+							<int key="NSvFlags">274</int>
+							<string key="NSFrameSize">{169, 125}</string>
+							<reference key="NSSuperview" ref="953402551"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
+							<string key="NSClassName">MyRubberView</string>
+						</object>
+					</array>
+					<string key="NSFrameSize">{169, 125}</string>
+					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
+					<reference key="NSNextKeyView" ref="668234819"/>
+				</object>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+			</object>
+			<object class="NSWindowTemplate" id="464546253">
+				<int key="NSWindowBacking">1</int>
+				<string key="NSWindowRect">{{109, 132}, {202, 136}}</string>
+				<int key="NSWTFlags">-2072505344</int>
+				<string key="NSWindowTitle">Cursor</string>
+				<string key="NSWindowClass">MyLayerWindow</string>
+				<nil key="NSViewClass"/>
+				<object class="NSView" key="NSWindowView" id="397099299">
+					<reference key="NSNextResponder"/>
+					<int key="NSvFlags">256</int>
+					<array class="NSMutableArray" key="NSSubviews">
+						<object class="NSCustomView" id="186698734">
+							<reference key="NSNextResponder" ref="397099299"/>
+							<int key="NSvFlags">274</int>
+							<string key="NSFrameSize">{202, 136}</string>
+							<reference key="NSSuperview" ref="397099299"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
+							<string key="NSClassName">MyCursorView</string>
+						</object>
+					</array>
+					<string key="NSFrameSize">{202, 136}</string>
+					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
+					<reference key="NSNextKeyView" ref="186698734"/>
+				</object>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSMaxSize">{1e+13, 1e+13}</string>
 			</object>
 			<object class="NSWindowTemplate" id="275939982">
 				<int key="NSWindowStyleMask">15</int>
@@ -471,57 +531,6 @@
 				<string key="NSMinSize">{320, 262}</string>
 				<string key="NSMaxSize">{1e+13, 1e+13}</string>
 			</object>
-			<object class="NSWindowTemplate" id="464546253">
-				<int key="NSWindowBacking">1</int>
-				<string key="NSWindowRect">{{109, 132}, {202, 136}}</string>
-				<int key="NSWTFlags">-2072505344</int>
-				<string key="NSWindowTitle">Window</string>
-				<string key="NSWindowClass">MyLayerWindow</string>
-				<nil key="NSViewClass"/>
-				<object class="NSView" key="NSWindowView" id="397099299">
-					<reference key="NSNextResponder"/>
-					<int key="NSvFlags">256</int>
-					<array class="NSMutableArray" key="NSSubviews">
-						<object class="NSCustomView" id="186698734">
-							<reference key="NSNextResponder" ref="397099299"/>
-							<int key="NSvFlags">274</int>
-							<string key="NSFrameSize">{202, 136}</string>
-							<reference key="NSSuperview" ref="397099299"/>
-							<string key="NSClassName">MyCursorView</string>
-						</object>
-					</array>
-					<string key="NSFrameSize">{202, 136}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSNextKeyView" ref="186698734"/>
-				</object>
-				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
-			</object>
-			<object class="NSWindowTemplate" id="456788506">
-				<int key="NSWindowBacking">1</int>
-				<string key="NSWindowRect">{{109, 132}, {169, 125}}</string>
-				<int key="NSWTFlags">-2072505344</int>
-				<string key="NSWindowTitle">Window</string>
-				<string key="NSWindowClass">MyLayerWindow</string>
-				<nil key="NSViewClass"/>
-				<object class="NSView" key="NSWindowView" id="953402551">
-					<nil key="NSNextResponder"/>
-					<int key="NSvFlags">256</int>
-					<array class="NSMutableArray" key="NSSubviews">
-						<object class="NSCustomView" id="668234819">
-							<reference key="NSNextResponder" ref="953402551"/>
-							<int key="NSvFlags">274</int>
-							<string key="NSFrameSize">{169, 125}</string>
-							<reference key="NSSuperview" ref="953402551"/>
-							<string key="NSClassName">MyRubberView</string>
-						</object>
-					</array>
-					<string key="NSFrameSize">{169, 125}</string>
-					<reference key="NSNextKeyView" ref="668234819"/>
-				</object>
-				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
-			</object>
 			<object class="NSCustomObject" id="796877042">
 				<string key="NSClassName">NSApplication</string>
 			</object>
@@ -576,6 +585,33 @@
 				<bool key="NSSelectsInsertedObjects">YES</bool>
 				<bool key="NSFilterRestrictsInsertion">YES</bool>
 				<bool key="NSClearsFilterPredicateOnInsertion">YES</bool>
+			</object>
+			<object class="NSMenu" id="680642365">
+				<string key="NSTitle">TopMenu</string>
+				<array class="NSMutableArray" key="NSMenuItems">
+					<object class="NSMenuItem" id="529766973">
+						<reference key="NSMenu" ref="680642365"/>
+						<string key="NSTitle">Resize Area</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<object class="NSCustomResource" key="NSOnImage" id="381919852">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">NSMenuCheckmark</string>
+						</object>
+						<object class="NSCustomResource" key="NSMixedImage" id="822270434">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">NSMenuMixedState</string>
+						</object>
+					</object>
+					<object class="NSMenuItem" id="292346984">
+						<reference key="NSMenu" ref="680642365"/>
+						<string key="NSTitle">Remove</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="381919852"/>
+						<reference key="NSMixedImage" ref="822270434"/>
+					</object>
+				</array>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -822,6 +858,38 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
+						<string key="label">topMenu</string>
+						<reference key="source" ref="906795404"/>
+						<reference key="destination" ref="680642365"/>
+					</object>
+					<int key="connectionID">100374</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">removeImage:</string>
+						<reference key="source" ref="906795404"/>
+						<reference key="destination" ref="292346984"/>
+					</object>
+					<int key="connectionID">100376</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">resizeArea:</string>
+						<reference key="source" ref="906795404"/>
+						<reference key="destination" ref="529766973"/>
+					</object>
+					<int key="connectionID">100377</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">winController</string>
+						<reference key="source" ref="906795404"/>
+						<reference key="destination" ref="512844837"/>
+					</object>
+					<int key="connectionID">100378</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
 						<string key="label">view</string>
 						<reference key="source" ref="578116863"/>
 						<reference key="destination" ref="817488943"/>
@@ -883,6 +951,30 @@
 						</object>
 					</object>
 					<int key="connectionID">100360</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">menu</string>
+						<reference key="source" ref="751878084"/>
+						<reference key="destination" ref="680642365"/>
+					</object>
+					<int key="connectionID">100365</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">topMenu</string>
+						<reference key="source" ref="751878084"/>
+						<reference key="destination" ref="680642365"/>
+					</object>
+					<int key="connectionID">100373</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="680642365"/>
+						<reference key="destination" ref="751878084"/>
+					</object>
+					<int key="connectionID">100372</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1233,6 +1325,25 @@
 						<reference key="object" ref="906795404"/>
 						<reference key="parent" ref="689508025"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100361</int>
+						<reference key="object" ref="680642365"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="529766973"/>
+							<reference ref="292346984"/>
+						</array>
+						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100362</int>
+						<reference key="object" ref="529766973"/>
+						<reference key="parent" ref="680642365"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100364</int>
+						<reference key="object" ref="292346984"/>
+						<reference key="parent" ref="680642365"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1318,6 +1429,7 @@
 				<string key="100293.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100294.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100300.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100301.CustomClassName">MyTopSskView</string>
 				<string key="100301.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100302.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100303.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1332,6 +1444,9 @@
 				<string key="100332.CustomClassName">MyTopSskCell</string>
 				<string key="100332.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100333.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100361.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100362.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100364.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="NO" key="5.IBNSWindowAutoPositionCentersHorizontal"/>
 				<boolean value="NO" key="5.IBNSWindowAutoPositionCentersVertical"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1343,7 +1458,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100360</int>
+			<int key="maxID">100378</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1456,6 +1571,47 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MyTopSskCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MyTopSskView</string>
+					<string key="superclassName">NSCollectionView</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="removeImage:">id</string>
+						<string key="resizeArea:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="removeImage:">
+							<string key="name">removeImage:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="resizeArea:">
+							<string key="name">resizeArea:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="sskMenu">NSMenu</string>
+						<string key="topMenu">NSMenu</string>
+						<string key="winController">MyWindowController</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="sskMenu">
+							<string key="name">sskMenu</string>
+							<string key="candidateClassName">NSMenu</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="topMenu">
+							<string key="name">topMenu</string>
+							<string key="candidateClassName">NSMenu</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="winController">
+							<string key="name">winController</string>
+							<string key="candidateClassName">MyWindowController</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MyTopSskView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -1609,5 +1765,9 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NSMenuCheckmark">{9, 8}</string>
+			<string key="NSMenuMixedState">{7, 2}</string>
+		</dictionary>
 	</data>
 </archive>
