--- a/kmtmg/en.lproj/MyDocument.xib
+++ b/kmtmg/en.lproj/MyDocument.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
+		<int key="IBDocument.SystemTarget">1070</int>
+		<string key="IBDocument.SystemVersion">11C62</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1934</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.AppKitVersion">1138.23</string>
+		<string key="IBDocument.HIToolboxVersion">567.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string key="NS.object.0">1934</string>
@@ -49,8 +49,9 @@
 				<string key="NSWindowTitle">Rubber</string>
 				<string key="NSWindowClass">MyLayerWindow</string>
 				<nil key="NSViewClass"/>
+				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="953402551">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSCustomView" id="668234819">
@@ -62,11 +63,11 @@
 						</object>
 					</array>
 					<string key="NSFrameSize">{169, 125}</string>
-					<reference key="NSSuperview"/>
 					<reference key="NSNextKeyView" ref="668234819"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<bool key="NSWindowIsRestorable">NO</bool>
 			</object>
 			<object class="NSWindowTemplate" id="464546253">
 				<int key="NSWindowBacking">1</int>
@@ -75,8 +76,9 @@
 				<string key="NSWindowTitle">Cursor</string>
 				<string key="NSWindowClass">MyLayerWindow</string>
 				<nil key="NSViewClass"/>
+				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="397099299">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSCustomView" id="186698734">
@@ -88,11 +90,11 @@
 						</object>
 					</array>
 					<string key="NSFrameSize">{202, 136}</string>
-					<reference key="NSSuperview"/>
 					<reference key="NSNextKeyView" ref="186698734"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<bool key="NSWindowIsRestorable">NO</bool>
 			</object>
 			<object class="NSWindowTemplate" id="275939982">
 				<int key="NSWindowStyleMask">15</int>
@@ -102,6 +104,7 @@
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">MyWindow</string>
 				<string key="NSViewClass">View</string>
+				<nil key="NSUserInterfaceItemIdentifier"/>
 				<string key="NSWindowContentMinSize">{320, 240}</string>
 				<object class="NSView" key="NSWindowView" id="568628114">
 					<reference key="NSNextResponder"/>
@@ -128,6 +131,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{0, 418}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="124652779"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="374602727">
@@ -153,6 +157,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{0, 450}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="438582917"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="550676989">
@@ -174,6 +179,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{32, 418}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="271182511"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="88099234">
@@ -195,6 +201,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{32, 466}, {32, 17}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="439273918"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="483550541">
@@ -220,6 +227,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{32, 450}, {32, 17}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="221403021"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="475798557">
@@ -241,7 +249,9 @@
 															<int key="NSvFlags">266</int>
 															<string key="NSFrame">{{64, 419}, {426, 64}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="335001281"/>
+															<bool key="NSViewCanDrawConcurrently">YES</bool>
 															<string key="NSClassName">MyHScrollView</string>
 														</object>
 														<object class="NSCustomView" id="335001281">
@@ -249,7 +259,9 @@
 															<int key="NSvFlags">276</int>
 															<string key="NSFrameSize">{64, 419}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="245208161"/>
+															<bool key="NSViewCanDrawConcurrently">YES</bool>
 															<string key="NSClassName">MyVScrollView</string>
 														</object>
 														<object class="NSScrollView" id="245208161">
@@ -267,19 +279,23 @@
 																				<object class="NSCustomView" id="465732959">
 																					<reference key="NSNextResponder" ref="615534696"/>
 																					<int key="NSvFlags">274</int>
-																					<string key="NSFrameSize">{415, 408}</string>
+																					<string key="NSFrameSize">{426, 419}</string>
 																					<reference key="NSSuperview" ref="615534696"/>
-																					<reference key="NSNextKeyView" ref="303982887"/>
+																					<reference key="NSWindow"/>
+																					<reference key="NSNextKeyView" ref="1031482229"/>
+																					<bool key="NSViewCanDrawConcurrently">YES</bool>
 																					<string key="NSClassName">MyView</string>
 																				</object>
 																			</array>
-																			<string key="NSFrameSize">{415, 408}</string>
+																			<string key="NSFrameSize">{426, 419}</string>
 																			<reference key="NSSuperview" ref="115432387"/>
+																			<reference key="NSWindow"/>
 																			<reference key="NSNextKeyView" ref="465732959"/>
 																		</object>
 																	</array>
-																	<string key="NSFrameSize">{415, 408}</string>
+																	<string key="NSFrameSize">{426, 419}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="615534696"/>
 																	<reference key="NSDocView" ref="615534696"/>
 																	<object class="NSColor" key="NSBGColor" id="407048720">
@@ -296,9 +312,10 @@
 																<object class="NSScroller" id="303982887">
 																	<reference key="NSNextResponder" ref="245208161"/>
 																	<int key="NSvFlags">256</int>
-																	<string key="NSFrame">{{415, 0}, {11, 408}}</string>
+																	<string key="NSFrame">{{415, 0}, {11, 413}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
-																	<reference key="NSNextKeyView" ref="1031482229"/>
+																	<reference key="NSWindow"/>
+																	<reference key="NSNextKeyView" ref="276230304"/>
 																	<int key="NSsFlags">256</int>
 																	<reference key="NSTarget" ref="245208161"/>
 																	<string key="NSAction">_doScroller:</string>
@@ -308,9 +325,10 @@
 																<object class="NSScroller" id="1031482229">
 																	<reference key="NSNextResponder" ref="245208161"/>
 																	<int key="NSvFlags">256</int>
-																	<string key="NSFrame">{{0, 408}, {415, 11}}</string>
+																	<string key="NSFrame">{{0, 408}, {420, 11}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
-																	<reference key="NSNextKeyView" ref="276230304"/>
+																	<reference key="NSWindow"/>
+																	<reference key="NSNextKeyView" ref="303982887"/>
 																	<int key="NSsFlags">257</int>
 																	<reference key="NSTarget" ref="245208161"/>
 																	<string key="NSAction">_doScroller:</string>
@@ -319,8 +337,9 @@
 															</array>
 															<string key="NSFrame">{{64, 0}, {426, 419}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="115432387"/>
-															<int key="NSsFlags">48</int>
+															<int key="NSsFlags">133168</int>
 															<reference key="NSVScroller" ref="303982887"/>
 															<reference key="NSHScroller" ref="1031482229"/>
 															<reference key="NSContentView" ref="115432387"/>
@@ -328,6 +347,7 @@
 													</array>
 													<string key="NSFrameSize">{490, 483}</string>
 													<reference key="NSSuperview" ref="969414390"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="858913219"/>
 													<string key="NSClassName">NSView</string>
 												</object>
@@ -340,6 +360,7 @@
 															<int key="NSvFlags">260</int>
 															<string key="NSFrame">{{32, 128}, {32, 32}}</string>
 															<reference key="NSSuperview" ref="276230304"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="689508025"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="569953613">
@@ -361,6 +382,7 @@
 															<int key="NSvFlags">260</int>
 															<string key="NSFrame">{{0, 128}, {32, 32}}</string>
 															<reference key="NSSuperview" ref="276230304"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="717106582"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="455745425">
@@ -390,6 +412,7 @@
 																			<int key="NSvFlags">274</int>
 																			<string key="NSFrameSize">{488, 126}</string>
 																			<reference key="NSSuperview" ref="463231561"/>
+																			<reference key="NSWindow"/>
 																			<reference key="NSNextKeyView" ref="452081562"/>
 																			<string key="NSMinGridSize">{0, 0}</string>
 																			<string key="NSMaxGridSize">{0, 0}</string>
@@ -409,6 +432,7 @@
 																	</array>
 																	<string key="NSFrame">{{1, 1}, {488, 126}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="906795404"/>
 																	<reference key="NSDocView" ref="906795404"/>
 																	<reference key="NSBGColor" ref="407048720"/>
@@ -419,6 +443,7 @@
 																	<int key="NSvFlags">-2147483392</int>
 																	<string key="NSFrame">{{-100, -100}, {15, 143}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="167522541"/>
 																	<reference key="NSTarget" ref="689508025"/>
 																	<string key="NSAction">_doScroller:</string>
@@ -430,6 +455,7 @@
 																	<int key="NSvFlags">-2147483392</int>
 																	<string key="NSFrame">{{-100, -100}, {233, 15}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="463231561"/>
 																	<int key="NSsFlags">1</int>
 																	<reference key="NSTarget" ref="689508025"/>
@@ -439,8 +465,9 @@
 															</array>
 															<string key="NSFrameSize">{490, 128}</string>
 															<reference key="NSSuperview" ref="276230304"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="12926121"/>
-															<int key="NSsFlags">546</int>
+															<int key="NSsFlags">133666</int>
 															<reference key="NSVScroller" ref="12926121"/>
 															<reference key="NSHScroller" ref="167522541"/>
 															<reference key="NSContentView" ref="463231561"/>
@@ -448,18 +475,21 @@
 													</array>
 													<string key="NSFrame">{{0, 493}, {490, 0}}</string>
 													<reference key="NSSuperview" ref="969414390"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="731023500"/>
 													<string key="NSClassName">NSView</string>
 												</object>
 											</array>
 											<string key="NSFrameSize">{490, 493}</string>
 											<reference key="NSSuperview" ref="1020549599"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="771364648"/>
 											<int key="NSDividerStyle">3</int>
 										</object>
 									</array>
 									<string key="NSFrameSize">{490, 493}</string>
 									<reference key="NSSuperview" ref="532050384"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="969414390"/>
 									<string key="NSClassName">NSView</string>
 								</object>
@@ -472,17 +502,21 @@
 											<int key="NSvFlags">274</int>
 											<string key="NSFrameSize">{0, 493}</string>
 											<reference key="NSSuperview" ref="452081562"/>
+											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView"/>
 											<string key="NSClassName">NSView</string>
 										</object>
 									</array>
 									<string key="NSFrame">{{500, 0}, {0, 493}}</string>
 									<reference key="NSSuperview" ref="532050384"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="510901244"/>
 									<string key="NSClassName">NSView</string>
 								</object>
 							</array>
 							<string key="NSFrameSize">{500, 493}</string>
 							<reference key="NSSuperview" ref="568628114"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1020549599"/>
 							<bool key="NSIsVertical">YES</bool>
 							<int key="NSDividerStyle">3</int>
@@ -490,11 +524,14 @@
 					</array>
 					<string key="NSFrameSize">{500, 493}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="532050384"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
 				<string key="NSMinSize">{320, 262}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<int key="NSWindowCollectionBehavior">256</int>
+				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
 			<object class="NSCustomObject" id="796877042">
 				<string key="NSClassName">NSApplication</string>
@@ -504,7 +541,7 @@
 			</object>
 			<object class="NSCollectionViewItem" id="578116863"/>
 			<object class="NSView" id="817488943">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">256</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="NSImageView" id="751878084">
@@ -534,7 +571,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{128, 128}</string>
-				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="751878084"/>
 			</object>
 			<object class="NSArrayController" id="674351445">
@@ -1060,6 +1096,7 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">100100</int>
 						<reference key="object" ref="271182511"/>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="771364648"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -1453,7 +1490,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100385</int>
+			<int key="maxID">100527</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1766,6 +1803,10 @@
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.macosx</string>
+			<integer value="1070" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
